--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-browser-detect-plugin": "^0.1.18",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
